add l18n for views/userparam

--- a/app/views/userparams/_form.html.erb
+++ b/app/views/userparams/_form.html.erb
@@ -1,12 +1,12 @@
 <div class="field">
-  <%= f.file_field :avatar, class:"input", placeholder:"Avatar" %><br>
+  <%= f.file_field :avatar, class:"input", placeholder: t(:avatar) %><br>
 </div>
 <div class="field">
-  <%= f.text_field :firstname, class:"input", placeholder:"Your Last Name" %><br>
+  <%= f.text_field :firstname, class:"input", placeholder: t(:yfn) %><br>
 </div>
 <div class="field">
-  <%= f.text_field :lastname, class:"input", placeholder:"Your Last Name" %><br>
+  <%= f.text_field :lastname, class:"input", placeholder: t(:yln) %><br>
 </div>
 <div class="field">
-  <%= f.text_field :age, class:"input", placeholder:"Your Age" %><br>
+  <%= f.text_field :age, class:"input", placeholder: t(:ya) %><br>
 </div>
