add i18n for views/themes

--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -3,10 +3,10 @@
 </div>
 
 <div class="field">
-  <%= f.text_field :name, class:"input", placeholder:"Name" %><br>
+  <%= f.text_field :name, class:"input", placeholder: t(:name) %><br>
 </div>
 <div class="field">
-  <%= f.text_field :download, class:"input", placeholder:"Link for download(after 'http://')" %><br>
+  <%= f.text_field :download, class:"input", placeholder: t(:link) %><br>
 </div>
 
 
@@ -17,9 +17,9 @@
     </p>
   <%end%>
   <div class="field">
-    <%= f.text_field :description, class:"input", placeholder:"Description" %><br>
+    <%= f.text_field :description, class:"input", placeholder: t(:description) %><br>
   </div>
 
   <div class="field">
-    <%= f.text_field :all_tags, class:"input", placeholder:"Tags" %><br>
+    <%= f.text_field :all_tags, class:"input", placeholder: t(:tags) %><br>
   </div>
