--- a/app/views/themes/_theme.html.erb
+++ b/app/views/themes/_theme.html.erb
@@ -1,26 +1,26 @@
 <br>
-Title:<br>
+<%= t(:title)%><br>
 <%= theme.name%><br>
 
 <% theme.photos.each do |x| %>
   <%= image_tag x.url[0] %>
 <% end %>
 <br>
-System:
+<%= t(:system)%>
 <br>
 <% theme.systems.each do |system| %>
   <%= system.name %><br>
 <% end %>
 
-Views :
+<%= t(:views)%>
 <%= theme.views %><br>
-Comments :
+<%= t(:comments)%>
 <br>
-<%= link_to "like", theme_like_path(theme.id)%>
+<%= link_to t(:like), theme_like_path(theme.id)%>
 <%= theme.likes.length %>|<br>
-<%= link_to "dislike", theme_dislike_path(theme.id) %>
+<%= link_to t(:dislike), theme_dislike_path(theme.id) %>
 <%= theme.dislikes.length %>
 <br>
-<%= link_to "More", theme_path(theme.id)%>
+<%= link_to t(:more), theme_path(theme.id)%>
 <hr>
 <br>
