--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,15 +1,15 @@
-Author:
+<%= t(:author)%>
 <%= comment.user.userparam.username%><br>
 <%=comment.text%><br>
-Created:
+<%= t(:created)%>
 <%= comment.created_at.to_date.strftime("%d %B, %Y ") %><hr>
 
 <% if user_signed_in? && comment.user.id == current_user.id %>
-  <%= link_to "delete", comment_path(comment.id), method: :delete %>
+  <%= link_to t(:delete), comment_path(comment.id), method: :delete %>
 <% end%>
-<%= link_to "like comment", comment_like_path(comment.id)%>
+<%= link_to t(:like), comment_like_path(comment.id)%>
 <%= comment.likes.length %>|<br>
-<%= link_to "dislike comment", comment_dislike_path(comment.id) %>
+<%= link_to t(:dislike), comment_dislike_path(comment.id) %>
 <%= comment.dislikes.length %>
 <ul>
   <%# render comment.comments %>
