--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for :comment, url:comments_path do |f| %>
 <%= f.text_field :text %>
 <%= f.hidden_field :theme_id, value: @theme.id %>
-<%= f.submit "Comment" %>
+<%= f.submit t(:comment) %>
 <%end%>
