--- a/app/views/systems/show.html.erb
+++ b/app/views/systems/show.html.erb
@@ -2,12 +2,10 @@
 <hr>
 <% if @themes == [] %>
   <% if user_signed_in? %>
-    <%= link_to "Add your Theme!", new_theme_path%>
+    <%= link_to t(:add), new_theme_path%>
   <% else %>
-    Want to create a new theme?<br>
-    <%= link_to "Login", new_user_session_path %>
-    or
-    <%= link_to "Registration", new_user_registration_path %>
+    <%= t(:tocreate)%><br>
+    <%= link_to t(:login), new_user_session_path %>
 
   <% end %>
 <% else %>
