add additional responsive design

--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,4 +1,4 @@
-<%= t(:tags)%>
+<h5 class="blue"><%= t(:tags)%></h5>
 <br>
 <a><%=link_to category.name, category_path(category.name), class:"text-secondary"%>
   |
