--- a/app/views/themes/_theme.html.erb
+++ b/app/views/themes/_theme.html.erb
@@ -1,26 +1,78 @@
-<br>
-<%= t(:title)%><br>
-<%= theme.name%><br>
+<div class="profile-user-info">
+	<div class="profile-info-row">
+		<div class="profile-info-name">
+			<%= t(:title)%>
+		</div>
 
-<% theme.photos.each do |x| %>
-  <%= image_tag x.url[0] %>
-<% end %>
-<br>
-<%= t(:system)%>
-<br>
-<% theme.systems.each do |system| %>
-  <%= system.name %><br>
-<% end %>
+	<div class="profile-info-value">
+		<span><%= theme.name%></span>
+	</div>
+</div>
 
-<%= t(:views)%>
-<%= theme.views %><br>
-<%= t(:comments)%>
-<br>
-<%= link_to t(:like), theme_like_path(theme.id)%>
-<%= theme.likes.length %>|<br>
-<%= link_to t(:dislike), theme_dislike_path(theme.id) %>
-<%= theme.dislikes.length %>
-<br>
-<%= link_to t(:more), theme_path(theme.id)%>
-<hr>
-<br>
+<div class="profile-info-row">
+	<div class="profile-info-name"></div>
+	<div class="profile-info-value center">
+		<% theme.photos.each do |x| %>
+      <span><%= image_tag x.url,  style:" width:300px;" %></span>
+    <% end %>
+	</div>
+</div>
+
+<div class="profile-info-row">
+	<div class="profile-info-name">
+		<%= t(:system)%>
+	</div>
+
+	<div class="profile-info-value">
+		<span>
+			<%theme.systems.each do |system|%>
+        <%= system.name %><br>
+      <%end%>
+		</span>
+	</div>
+</div>
+
+<div class="profile-info-row">
+	<div class="profile-info-name">
+		<%= t(:views)%>
+	</div>
+
+	<div class="profile-info-value">
+		<span>
+			<%= theme.views %>
+		</span>
+	</div>
+</div>
+
+<div class="profile-info-row">
+	<div class="profile-info-name">
+    <%= link_to t(:like), theme_like_path(theme.id)%>
+	</div>
+
+	<div class="profile-info-value">
+		<span>
+			<%= theme.likes.length %>
+		</span>
+	</div>
+</div>
+
+<div class="profile-info-row">
+	<div class="profile-info-name">
+    <%= link_to t(:dislike), theme_dislike_path(theme.id)%>
+	</div>
+
+	<div class="profile-info-value">
+		<span>
+      <%= theme.dislikes.length %>
+		</span>
+	</div>
+</div>
+
+<div class="profile-info-row">
+  <div class="profile-info-name"></div>
+          
+  <div class="profile-info-value">
+    <%= link_to t(:more), theme_path(theme.id), class:"btn btn-secondary"%>
+  </div>
+</div>
+</div>
