--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -32,7 +32,7 @@
   </div>
 <% end %>
 
-<%= button_to t(:delete), registration_path(resource_name), data: { confirm: t(:confask) }, method: :delete, class:"btn btn-secondary" %></p>
+<%= button_to t(:deleteacc), registration_path(resource_name), data: { confirm: t(:confask) }, method: :delete, class:"btn btn-secondary" %></p>
 
 <%= link_to t(:back), :back, class:"btn btn-secondary" %>
 </div>
