--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,6 +62,92 @@
     box-shadow:none !important;
     outline:0px !important;
 }
+.btn-default {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    width: 100%;
+    border: 2px solid #ff8ef3;
+    border-radius: 10px;
+    padding: 5px;
+    color: #ff8ef3;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+}
+.btn-default:hover,.btn-default:active,.btn-default:focus {
+    color: #ff82e7 !important;
+    background-color: #FFFFFF;
+    border-radius: 10px;
+    box-shadow:none !important;
+    outline:0px !important;
+}
+.nav-link {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    width: 100%;
+    padding: 5px;
+    color: #ff8ef3;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+}
+.nav-link:hover,.nav-link:active,.nav-link:focus {
+    color: #ff82e7 !important;
+    border-bottom: 2px solid #ff8ef3;
+    background-color: #FFFFFF;
+    box-shadow:none !important;
+    outline:0px !important;
+}
+.nav-item {
+    margin-right: 20px;
+}
+.btn-main-ghost:hover {
+    color: #ff82e7 !important
+}
+.label {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    }
+    
+    .css-checkbox {
+          position: absolute; 
+        overflow: hidden; 
+        clip: rect(0 0 0 0); 
+        height:1px; 
+        width:1px; 
+        margin:-1px; 
+        padding:0;
+        border:0;
+    }
+    
+    .css-checkbox + .css-label {
+        padding-left:20px;
+        height:15px; 
+        display:inline-block;
+        line-height:15px;
+        background-repeat:no-repeat;
+        background-position: 0 0;
+        font-size:15px;
+        vertical-align:middle;
+        cursor:pointer;
+    }
+    
+    .css-checkbox:checked + .css-label {
+        background-position: 0 -15px;
+    }
+    
+    .css-label{
+        background-image:url(http://csscheckbox.com/checkboxes/dark-check-green.png);
+    }
+    .lite-x-cyan{background-image:url(http://csscheckbox.com/checkboxes/lite-x-cyan.png);}
 .container {
     position: relative;
     z-index: 1;
@@ -211,4 +297,21 @@
 
 .blue {
     color: #478FCA!important
+}
+
+.pinkie-right {
+    background: linear-gradient(to right, rgba(255,234,251,1) 0%,rgba(255,234,251,0.6) 38%,rgba(255,255,255,1) 71%);
+    padding:10px;
+    border-right: 1px solid #ff8ef3;
+}
+
+.pinkie-left {
+    background: linear-gradient(to left, rgba(255,234,251,1) 0%,rgba(255,234,251,0.6) 38%,rgba(255,255,255,1) 71%);
+    padding:10px;
+}
+
+.pinkie-bottom {
+    background: linear-gradient(to bottom, rgba(255,234,251,1) 0%,rgba(255,234,251,0.6) 38%,rgba(255,255,255,1) 71%);
+    padding:10px;
+    border-right: 1px solid #ff8ef3;
 }
