--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for :comment, url:comments_path do |f| %>
-<%= f.text_field :text %>
+<%= f.text_field :text, class:"input"%>
 <%= f.hidden_field :theme_id, value: @theme.id %>
-<%= f.submit t(:comment) %>
+<%= f.submit t(:comment), class:"btn btn-default" %>
 <%end%>
