--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #ffeafb;">
   <a class="navbar-brand">THEMES</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
   <ul class="navbar-nav mr-auto">
   <li class="nav-item"><%= link_to t(:home), root_path, class:"nav-link" %></li>
 
@@ -40,21 +44,23 @@
 
         <% if user_signed_in? %>
 
-        <li class="nav-item"><%= link_to t(:logout), destroy_user_session_path, method: :delete, class:"nav-link" %></li>
+        <li class="nav-item"><%= link_to t(:logout), destroy_user_session_path, method: :delete, class:"btn btn-default" %></li>
 
         <%else%>
 
-        <li class="nav-item ml-auto"><%= link_to t(:log_in), new_user_session_path, class:"nav-link" %></li>
+        <li class="nav-item ml-auto"><%= link_to t(:log_in), new_user_session_path, class:"btn btn-default" %></li>
 
         <% end %>
+
+        <li class="nav-lang is-first text-sm-center">
+          <% if I18n.locale == :uk %>
+          <%= link_to 'EN', { locale: :en }, { class: 'btn btn-main-ghost' } %>
+          <% else %>
+          <%= link_to 'UA', { locale: :uk }, { class: 'btn btn-main-ghost' } %>
+          <% end %>
+        </li>
     </ul>
-  <li class="nav-lang is-first text-sm-center">
-    <% if I18n.locale == :uk %>
-    <%= link_to 'EN', { locale: :en }, { class: 'btn btn-main-ghost' } %>
-    <% else %>
-    <%= link_to 'UA', { locale: :uk }, { class: 'btn btn-main-ghost' } %>
-    <% end %>
-  </li>
+    </div>
 </nav>
 
 <p class="notice"><%= notice %></p>
