--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -8,18 +8,16 @@
 <div class="field">
   <%= f.text_field :download, class:"input", placeholder: t(:link) %><br>
 </div>
-
-
+<div class="field">
   <%@systems.each do |system|%>
-    <p>
-      <%= check_box_tag 'system_ids[]' , system.id%>
+      <%= check_box_tag('system_ids[]', system.id, checked = false) %>
       <%= f.label system.name%>
-    </p>
   <%end%>
-  <div class="field">
-    <%= f.text_field :description, class:"input", placeholder: t(:description) %><br>
-  </div>
+</div>
+<div class="field">
+  <%= f.text_field :description, class:"input", placeholder: t(:description) %><br>
+</div>
 
-  <div class="field">
-    <%= f.text_field :all_tags, class:"input", placeholder: t(:tags) %><br>
-  </div>
+<div class="field">
+  <%= f.text_field :all_tags, class:"input", placeholder: t(:tags) %><br>
+</div>
