--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
   <li class="nav-item"><%= link_to t(:home), root_path, class:"nav-link" %></li>
 
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown"><%= t :themes %>
+    <a class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown"><%= t (:themes) %>
       <span class="caret"></span>
     </a>
       <ul class="dropdown-menu">
