--- a/app/views/themes/edit.html.erb
+++ b/app/views/themes/edit.html.erb
@@ -1,7 +1,7 @@
 <h3><%= t(:theme)%>
   <b><%=@theme.name%></b>
 </h3>
-<%=form_for @theme, url:theme_path(@theme.id) do |f|%>
+<%= form_for @theme, url:theme_path(@theme.id), validate: true do |f|%>
 <%=render 'themes/form', f:f%>
 <%=f.submit t(:update), class:"btn btn-primary"%>
 <%end%>
