--- a/app/views/userparams/show.html.erb
+++ b/app/views/userparams/show.html.erb
@@ -4,7 +4,7 @@
 		<div class="col-lg-3"></div>
 		<div class="col-sm-6 col-lg-3 center">
 			<span class="profile-picture">
-				<%= image_tag @userparam.avatar.url(:thumb), class:"img-thumbnail"%>
+				<%= image_tag @userparam.avatar.url(:original), class:"img-thumbnail", style:"width:500px"%>
 			</span>
 
 			<%if user_signed_in? && current_user.id == @userparam.id%>
