--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="login-page" class="container">
+<div class="login-page" class="container" style="background-image: url(/assets/ales-krivec-201390-unsplash.jpg); background-size:cover">
   <div class="registration-form" class="form">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
