--- a/app/views/systems/show.html.erb
+++ b/app/views/systems/show.html.erb
@@ -2,6 +2,8 @@
 
 	<div class="row">
 		<div class="col-lg-4 pinkie-right">
+
+      <h5 class="blue"><%= t(:tags)%></h5>
       <%= render @categories %>
     </div>
 
