--- a/app/views/themes/_theme.html.erb
+++ b/app/views/themes/_theme.html.erb
@@ -34,7 +34,7 @@
 
 <div class="profile-info-row">
 	<div class="profile-info-name">
-		<%= t(:views)%>
+		<%= t(:view)%>
 	</div>
 
 	<div class="profile-info-value">
